# msp_protocol

./: Cargo.toml  README.md
examples/: cli.rs  fetch_drones_state.rs  fetch_imu.rs
src/: helpers.rs  lib.rs
src/msp/: data.rs  mod.rs  packet.rs  parser.rs
