[package]
name = "msp_protocol"
version = "0.1.2"
edition = "2024"
license     = "MIT OR Apache-2.0"
description = "MultiWii Serial Protocol (MSP) encoder/decoder and transport layer"
repository  = "https://github.com/tassalor1/msp_protocol"
keywords    = ["drone", "msp", "betaflight", "serial"]

[dependencies]
anyhow = "1"
serialport = "4"
crc-any = "2"
smallvec = "1"
packed_struct = "0.10"
serde = { version = "1", features = ["derive"] }

